# networkServer

./: .env.example  pyproject.toml  redisClient.py  server.py
.github/workflows/: main.yml
controllers/: addPeer.py  getPeerDetails.py  peerController.py  removePeer.py
dhcp/: interfaceRequests.py  ipaddresses.py  keyspace.py  peerRequests.py
wireguard/: configerations.py  interface.py  iptables.py  keys.py  peer.py  startStop.py
